--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,2 +1,21 @@
 @import "normalize.css";
 @import "variables.css";
+
+#root {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 2rem;
+    text-align: center;
+}
+
+.calc-input {
+
+}
+
+.calc-input:focus {
+    outline: none;
+}
+
+.calc-input:active {
+    outline: none;
+}
