--- a/src/app.module.css
+++ b/src/app.module.css
@@ -18,6 +18,15 @@
     margin-bottom: 20px;
 }
 
+.calc__display {
+    margin-bottom: 20px;
+    padding: 15px;
+    height: 30px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    font-size: 20px;
+}
+
 .calc__list {
     display: flex;
     flex-wrap: wrap;
